# PyRoboVision

./: .installer_config  README.md  object_detect.py  pyproject.toml
